# my-django-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt
config/: settings.py  urls.py
expenses/: __init__.py  admin.py  middlewares.py  models.py  serializers.py  urls.py  views.py
expenses/migrations/: 0001_initial.py
expenses/services/: CategoriesService.py  ExpensesService.py  __init__.py
expenses/views/: __init__.py  categories_views.py  expenses_views.py  permissions.py  system_views.py
